<resources>
    <string name="app_name">Trivia App</string>

    <string name="welcome_to">Welcome to</string>
    <string name="action_settings">Settings</string>
    <string name="Trivia_App">Trivia App</string>
    <string name="Start_Trivia">Start Trivia</string>
    <string name="Create_Quiz">Create Quiz Qusetion</string>
    <string name="Delete_Quiz">Delete All My Question</string>
    <string name="Exit">Exit</string>
    <string name="title_activity_trivia">TriviaActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="title_activity_create_question">CreateQuestionActivity</string>
</resources>
